--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+
 
     defaultConfig {
-        applicationId "naman14.timber"
+        applicationId "euphony"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 9
